Update title and form labels in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Rescisão de Contrato Portugal 2026</title>
+    <title>Simulador de Rescisão e Acerto de Contas 2026</title>
 
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4525/4525944.png">
 
@@ -12,257 +12,99 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
-        :root {
-            --primary: #0f172a;
-            --accent: #0369a1;
-            --bg: #f8fafc;
-            --gold: #b45309;
-        }
-
-        body {
-            font-family: 'Inter', system-ui, sans-serif;
-            background: var(--bg);
-            color: #334155;
-            padding: 10px;
-            margin: 0;
-        }
-
-        .container {
-            max-width: 650px;
-            margin: 10px auto;
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .container::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 5px;
-            background: linear-gradient(90deg, var(--primary), var(--gold));
-        }
-
-        .header-seal {
-            text-align: center;
-            margin-bottom: 15px;
-            color: var(--gold);
-            font-size: 3.5rem;
-        }
-
-        h1 {
-            font-size: 1.3rem;
-            color: var(--primary);
-            text-align: center;
-            margin-bottom: 25px;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-        }
-
-        .full {
-            grid-column: span 2;
-        }
-
-        label {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-weight: 600;
-            font-size: 0.85rem;
-            margin-bottom: 6px;
-            color: #475569;
-        }
-
-        label i {
-            color: var(--gold);
-            width: 16px;
-        }
-
-        input, select {
-            width: 100%;
-            height: 48px;
-            padding: 0 12px;
-            border: 1px solid #cbd5e1;
-            border-radius: 6px;
-            font-size: 16px;
-            box-sizing: border-box;
-            background: #fff;
-        }
-
-        .highlight-card {
-            background: #fefce8;
-            border: 1px solid #fef08a;
-            padding: 15px;
-            border-radius: 8px;
-            margin: 5px 0;
-        }
-
-        button {
-            width: 100%;
-            height: 56px;
-            background: var(--primary);
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 1rem;
-            font-weight: 700;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: 0.2s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        button:hover {
-            background: #1e293b;
-            transform: translateY(-1px);
-        }
-
-        #results {
-            margin-top: 25px;
-            display: none;
-            border: 2px solid #e2e8f0;
-            border-radius: 10px;
-            padding: 20px;
-            background: #fff;
-        }
-
-        .res-line {
-            display: flex;
-            justify-content: space-between;
-            padding: 12px 0;
-            border-bottom: 1px dashed #e2e8f0;
-            font-size: 0.95rem;
-        }
-
-        .total-box {
-            background: var(--primary);
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            font-size: 1.6rem;
-            font-weight: 800;
-            margin-top: 15px;
-        }
-
-        .footer-legal {
-            margin-top: 30px;
-            padding-top: 20px;
-            border-top: 1px solid #e2e8f0;
-            font-size: 0.72rem;
-            color: #94a3b8;
-            text-align: center;
-            line-height: 1.4;
-        }
-
-        .ad-spacer {
-            margin: 20px 0;
-            min-height: 90px;
-            background: #fafafa;
-            border: 1px solid #eee;
-            border-radius: 4px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 9px;
-            color: #ccc;
-        }
-
-        @media (max-width: 550px) {
-            .grid {
-                grid-template-columns: 1fr;
-            }
-
-            .full {
-                grid-column: span 1;
-            }
-        }
+        :root { --primary: #0f172a; --accent: #0369a1; --bg: #f8fafc; --gold: #b45309; }
+        body { font-family: 'Inter', sans-serif; background: var(--bg); color: #334155; padding: 10px; margin: 0; }
+        .container { max-width: 700px; margin: 10px auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); position: relative; overflow: hidden; }
+        .container::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 5px; background: linear-gradient(90deg, var(--primary), var(--gold)); }
+        h1 { font-size: 1.3rem; color: var(--primary); text-align: center; margin-bottom: 25px; text-transform: uppercase; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
+        .full { grid-column: span 2; }
+        label { display: flex; align-items: center; gap: 8px; font-weight: 600; font-size: 0.85rem; margin-bottom: 6px; color: #475569; }
+        input, select { width: 100%; height: 48px; padding: 0 12px; border: 1px solid #cbd5e1; border-radius: 6px; font-size: 16px; box-sizing: border-box; }
+        .highlight-card { background: #fefce8; border: 1px solid #fef08a; padding: 15px; border-radius: 8px; }
+        button { width: 100%; height: 56px; background: var(--primary); color: white; border: none; border-radius: 8px; font-size: 1rem; font-weight: 700; cursor: pointer; margin-top: 20px; transition: 0.2s; }
+        button:hover { background: #1e293b; transform: translateY(-1px); }
+        #results { margin-top: 25px; display: none; border: 2px solid #e2e8f0; border-radius: 10px; padding: 20px; background: #fff; }
+        .res-line { display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px dashed #e2e8f0; font-size: 0.95rem; }
+        .total-box { background: var(--primary); color: white; padding: 20px; border-radius: 8px; text-align: center; font-size: 1.6rem; font-weight: 800; margin-top: 15px; }
+        .ad-spacer { margin: 20px 0; min-height: 90px; background: #fafafa; border: 1px solid #eee; display: flex; align-items: center; justify-content: center; font-size: 9px; color: #ccc; }
+        @media (max-width: 550px) { .grid { grid-template-columns: 1fr; } .full { grid-column: span 1; } }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <div class="header-seal">
-            <i class="fas fa-certificate"></i>
-        </div>
-        <h1>Simulador de Rescisão de Contrato</h1>
+        <h1>Simulador de Rescisão (ACT 2026)</h1>
 
         <div class="ad-spacer">PUBLICIDADE</div>
 
         <div class="grid">
             <div class="full">
-                <label><i class="fas fa-euro-sign"></i> Vencimento Base + Diuturnidades (€)</label>
-                <input type="number" id="vencBase" placeholder="Ex: 1450" inputmode="decimal">
+                <label><i class="fas fa-euro-sign"></i> Vencimento Base Mensal (€)</label>
+                <input type="number" id="vencBase" placeholder="Ex: 1200" inputmode="decimal">
+            </div>
+
+            <div class="input-box">
+                <label><i class="fas fa-utensils"></i> Subsídio Refeição/Dia (€)</label>
+                <input type="number" id="subVal" value="9.60" step="0.10">
+            </div>
+
+            <div class="input-box">
+                <label>Tipo de Recebimento</label>
+                <select id="subTipo">
+                    <option value="cartao">Cartão (Isento até 9.60€)</option>
+                    <option value="dinheiro">Dinheiro (Isento até 6.00€)</option>
+                </select>
             </div>
 
             <div class="full">
-                <label><i class="fas fa-file-contract"></i> Tipo de Cessação e Contrato</label>
+                <label><i class="fas fa-file-contract"></i> Motivo da Cessação</label>
                 <select id="tipo">
                     <optgroup label="Iniciativa do Trabalhador">
                         <option value="denuncia">Pedido de Demissão (Com Aviso Prévio)</option>
                         <option value="denuncia_sem_aviso">Pedido de Demissão (SEM Aviso Prévio)</option>
-                        <option value="rescisao_justa">Rescisão com Justa Causa pelo Trabalhador</option>
+                        <option value="rescisao_justa">Rescisão com Justa Causa (Trabalhador)</option>
                     </optgroup>
                     <optgroup label="Fim de Contrato (Caducidade)">
-                        <option value="cad_termo_certo">Caducidade: Fim de Contrato a Termo CERTO</option>
-                        <option value="cad_termo_incerto">Caducidade: Fim de Contrato a Termo INCERTO</option>
+                        <option value="cad_termo_certo">Caducidade: Fim de Contrato a Termo Certo</option>
+                        <option value="cad_termo_incerto">Caducidade: Fim de Contrato a Termo Incerto</option>
                         <option value="cad_reforma">Caducidade por Reforma</option>
                     </optgroup>
                     <optgroup label="Iniciativa da Empresa">
                         <option value="extincao">Despedimento por Extinção de Posto / Coletivo</option>
-                        <option value="ineptidao">Despedimento por Inadaptação</option>
-                        <option value="justa_causa">Despedimento com Justa Causa pela Empresa</option>
-                    </optgroup>
-                    <optgroup label="Outros">
-                        <option value="mutuo_acordo">Revogação por Mútuo Acordo</option>
-                        <option value="periodo_experimental">Denúncia no Período Experimental</option>
+                        <option value="justa_causa">Despedimento com Justa Causa (Empresa)</option>
                     </optgroup>
                 </select>
             </div>
 
             <div>
-                <label><i class="fas fa-history"></i> Anos Completos</label>
+                <label><i class="fas fa-history"></i> Anos na Empresa</label>
                 <input type="number" id="anos" value="0" min="0">
             </div>
             <div>
-                <label><i class="fas fa-calendar-alt"></i> Meses no Ano Corrente</label>
+                <label><i class="fas fa-calendar-alt"></i> Meses trabalhados este ano</label>
                 <input type="number" id="meses" value="1" min="1" max="12">
             </div>
 
             <div class="full highlight-card">
-                <label><i class="fas fa-umbrella-beach"></i> Dias de Férias não gozados (Anos anteriores)</label>
+                <label><i class="fas fa-umbrella-beach"></i> Dias de Férias não gozados</label>
                 <input type="number" id="fVencidas" value="0">
             </div>
 
             <div class="full">
-                <label><i class="fas fa-user-graduate"></i> Horas de Formação em falta (Últimos 3 anos)</label>
+                <label><i class="fas fa-user-graduate"></i> Horas de Formação em falta (3 anos)</label>
                 <input type="number" id="horasForm" value="0">
             </div>
         </div>
 
-        <button onclick="calcular()">
-            <i class="fas fa-stamp"></i> CALCULAR ACERTO FINAL
-        </button>
+        <button onclick="calcular()">CALCULAR VALORES FINAIS</button>
 
         <div id="results">
-            <div class="res-line"><span><i class="fas fa-balance-scale"></i> Compensação / Indemnização:</span> <span id="r-comp">0,00 €</span></div>
-            <div class="res-line"><span><i class="fas fa-sun"></i> Férias Vencidas + Subsídio:</span> <span id="r-fer-venc">0,00 €</span></div>
-            <div class="res-line"><span><i class="fas fa-percentage"></i> Proporcionais (Férias e Natal):</span> <span id="r-prop">0,00 €</span></div>
-            <div class="res-line"><span><i class="fas fa-graduation-cap"></i> Créditos Formação:</span> <span id="r-form">0,00 €</span></div>
+            <div class="res-line"><span>Compensação / Indemnização:</span> <span id="r-comp">0,00 €</span></div>
+            <div class="res-line"><span>Férias não gozadas + Subsídio:</span> <span id="r-fer-venc">0,00 €</span></div>
+            <div class="res-line"><span>Proporcionais (Natal e Férias):</span> <span id="r-prop">0,00 €</span></div>
+            <div class="res-line"><span>Créditos de Formação:</span> <span id="r-form">0,00 €</span></div>
+            <div class="res-line"><span>Último mês (estimativa c/ sub. refeição):</span> <span id="r-mes">0,00 €</span></div>
 
             <div class="total-box">
                 <div style="font-size: 0.7rem; opacity: 0.9; margin-bottom: 5px;">TOTAL BRUTO ESTIMADO</div>
@@ -270,47 +112,42 @@
             </div>
             <div class="ad-spacer">PUBLICIDADE</div>
         </div>
-
-        <div class="footer-legal">
-            Cálculos baseados no Código do Trabalho vigente e orientações da ACT para 2026.
-        </div>
     </div>
 
     <script>
         function calcular() {
             const base = parseFloat(document.getElementById('vencBase').value) || 0;
+            const subVal = parseFloat(document.getElementById('subVal').value) || 0;
+            const subTipo = document.getElementById('subTipo').value;
             const tipo = document.getElementById('tipo').value;
             const anos = parseInt(document.getElementById('anos').value) || 0;
-            const meses = parseInt(document.getElementById('meses').value) || 1;
+            const meses = parseInt(document.getElementById('meses').value) || 0;
             const fVencidas = parseInt(document.getElementById('fVencidas').value) || 0;
             const hForm = parseInt(document.getElementById('horasForm').value) || 0;
 
             if (base <= 0) { alert("Introduza o vencimento base."); return; }
 
+            // 1. Compensação (Lógica ACT)
             let diasComp = 0;
-            // Lógica de compensação atualizada conforme ACT
-            switch(tipo) {
-                case 'cad_termo_certo':
-                case 'cad_termo_incerto':
-                    diasComp = 24; 
-                    break;
-                case 'extincao':
-                case 'ineptidao':
-                    diasComp = 14; 
-                    break;
-                case 'rescisao_justa':
-                    diasComp = 30; 
-                    break;
-                default:
-                    diasComp = 0;
-            }
+            if (tipo === 'cad_termo_certo' || tipo === 'cad_termo_incerto') diasComp = 24;
+            else if (tipo === 'extincao') diasComp = 14;
+            else if (tipo === 'rescisao_justa') diasComp = 30;
 
             const compensacao = (base / 30) * diasComp * (anos + (meses / 12));
-            const valorHora = (base * 12) / (52 * 40);
-            const feriasVencidas = fVencidas * (base / 22) * 2;
+
+            // 2. Férias e Proporcionais
+            const valorDia = base / 22;
+            const feriasVencidas = fVencidas * valorDia * 2; // Dias + Subsídio
             const propNatal = (base / 12) * meses;
-            const propFerias = ((base / 12) * meses) * 2;
+            const propFerias = (base / 12) * meses * 2; // Proporcional dias + Proporcional subsídio
+
+            // 3. Formação
+            const valorHora = (base * 12) / (52 * 40);
             const formacao = hForm * valorHora;
+
+            // 4. Último Mês e Subsídio de Refeição
+            const subMensal = subVal * 22;
+            const ultimoMes = base + subMensal;
 
             const total = compensacao + feriasVencidas + propNatal + propFerias + formacao;
             const eur = (v) => v.toLocaleString('pt-PT', { style: 'currency', currency: 'EUR' });
@@ -319,12 +156,12 @@
             document.getElementById('r-fer-venc').innerText = eur(feriasVencidas);
             document.getElementById('r-prop').innerText = eur(propNatal + propFerias);
             document.getElementById('r-form').innerText = eur(formacao);
-            document.getElementById('r-total').innerText = eur(total);
+            document.getElementById('r-mes').innerText = eur(ultimoMes);
+            document.getElementById('r-total').innerText = eur(total + ultimoMes);
 
             document.getElementById('results').style.display = 'block';
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
     </script>
-
 </body>
 </html>
