Update title and improve styling in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Rescisão e Acerto de Contas 2026</title>
+    <title>Simulador de Rescisão de Contrato Portugal 2026</title>
 
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4525/4525944.png">
 
@@ -16,25 +16,31 @@
         body { font-family: 'Inter', sans-serif; background: var(--bg); color: #334155; padding: 10px; margin: 0; }
         .container { max-width: 700px; margin: 10px auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); position: relative; overflow: hidden; }
         .container::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 5px; background: linear-gradient(90deg, var(--primary), var(--gold)); }
-        h1 { font-size: 1.3rem; color: var(--primary); text-align: center; margin-bottom: 25px; text-transform: uppercase; }
+        .header-seal { text-align: center; margin-bottom: 15px; color: var(--gold); font-size: 3.5rem; }
+        h1 { font-size: 1.3rem; color: var(--primary); text-align: center; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 0.5px; }
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
         .full { grid-column: span 2; }
         label { display: flex; align-items: center; gap: 8px; font-weight: 600; font-size: 0.85rem; margin-bottom: 6px; color: #475569; }
-        input, select { width: 100%; height: 48px; padding: 0 12px; border: 1px solid #cbd5e1; border-radius: 6px; font-size: 16px; box-sizing: border-box; }
+        label i { color: var(--gold); width: 16px; }
+        input, select { width: 100%; height: 48px; padding: 0 12px; border: 1px solid #cbd5e1; border-radius: 6px; font-size: 16px; box-sizing: border-box; background: #fff; }
         .highlight-card { background: #fefce8; border: 1px solid #fef08a; padding: 15px; border-radius: 8px; }
-        button { width: 100%; height: 56px; background: var(--primary); color: white; border: none; border-radius: 8px; font-size: 1rem; font-weight: 700; cursor: pointer; margin-top: 20px; transition: 0.2s; }
+        button { width: 100%; height: 56px; background: var(--primary); color: white; border: none; border-radius: 8px; font-size: 1rem; font-weight: 700; cursor: pointer; margin-top: 20px; transition: 0.2s; display: flex; align-items: center; justify-content: center; gap: 10px; }
         button:hover { background: #1e293b; transform: translateY(-1px); }
         #results { margin-top: 25px; display: none; border: 2px solid #e2e8f0; border-radius: 10px; padding: 20px; background: #fff; }
         .res-line { display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px dashed #e2e8f0; font-size: 0.95rem; }
         .total-box { background: var(--primary); color: white; padding: 20px; border-radius: 8px; text-align: center; font-size: 1.6rem; font-weight: 800; margin-top: 15px; }
-        .ad-spacer { margin: 20px 0; min-height: 90px; background: #fafafa; border: 1px solid #eee; display: flex; align-items: center; justify-content: center; font-size: 9px; color: #ccc; }
+        .footer-legal { margin-top: 30px; padding-top: 20px; border-top: 1px solid #e2e8f0; font-size: 0.72rem; color: #94a3b8; text-align: center; line-height: 1.4; }
+        .ad-spacer { margin: 20px 0; min-height: 90px; background: #fafafa; border: 1px solid #eee; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-size: 9px; color: #ccc; }
         @media (max-width: 550px) { .grid { grid-template-columns: 1fr; } .full { grid-column: span 1; } }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Simulador de Rescisão (ACT 2026)</h1>
+        <div class="header-seal">
+            <i class="fas fa-certificate"></i>
+        </div>
+        <h1>Simulador de Rescisão de Contrato</h1>
 
         <div class="ad-spacer">PUBLICIDADE</div>
 
@@ -44,12 +50,12 @@
                 <input type="number" id="vencBase" placeholder="Ex: 1200" inputmode="decimal">
             </div>
 
-            <div class="input-box">
+            <div>
                 <label><i class="fas fa-utensils"></i> Subsídio Refeição/Dia (€)</label>
                 <input type="number" id="subVal" value="9.60" step="0.10">
             </div>
 
-            <div class="input-box">
+            <div>
                 <label>Tipo de Recebimento</label>
                 <select id="subTipo">
                     <option value="cartao">Cartão (Isento até 9.60€)</option>
@@ -97,20 +103,26 @@
             </div>
         </div>
 
-        <button onclick="calcular()">CALCULAR VALORES FINAIS</button>
+        <button onclick="calcular()">
+            <i class="fas fa-stamp"></i> CALCULAR VALORES FINAIS
+        </button>
 
         <div id="results">
             <div class="res-line"><span>Compensação / Indemnização:</span> <span id="r-comp">0,00 €</span></div>
             <div class="res-line"><span>Férias não gozadas + Subsídio:</span> <span id="r-fer-venc">0,00 €</span></div>
             <div class="res-line"><span>Proporcionais (Natal e Férias):</span> <span id="r-prop">0,00 €</span></div>
             <div class="res-line"><span>Créditos de Formação:</span> <span id="r-form">0,00 €</span></div>
-            <div class="res-line"><span>Último mês (estimativa c/ sub. refeição):</span> <span id="r-mes">0,00 €</span></div>
+            <div class="res-line"><span>Último mês (Estimativa c/ subsídio):</span> <span id="r-mes">0,00 €</span></div>
 
             <div class="total-box">
                 <div style="font-size: 0.7rem; opacity: 0.9; margin-bottom: 5px;">TOTAL BRUTO ESTIMADO</div>
                 <span id="r-total">0,00 €</span>
             </div>
             <div class="ad-spacer">PUBLICIDADE</div>
+        </div>
+
+        <div class="footer-legal">
+            As fontes de cálculo baseiam-se no Código do Trabalho vigente e orientações da Autoridade para as Condições do Trabalho (ACT) para 2026.
         </div>
     </div>
 
@@ -127,7 +139,7 @@
 
             if (base <= 0) { alert("Introduza o vencimento base."); return; }
 
-            // 1. Compensação (Lógica ACT)
+            // 1. Compensação
             let diasComp = 0;
             if (tipo === 'cad_termo_certo' || tipo === 'cad_termo_incerto') diasComp = 24;
             else if (tipo === 'extincao') diasComp = 14;
@@ -137,15 +149,15 @@
 
             // 2. Férias e Proporcionais
             const valorDia = base / 22;
-            const feriasVencidas = fVencidas * valorDia * 2; // Dias + Subsídio
+            const feriasVencidas = fVencidas * valorDia * 2; 
             const propNatal = (base / 12) * meses;
-            const propFerias = (base / 12) * meses * 2; // Proporcional dias + Proporcional subsídio
+            const propFerias = (base / 12) * meses * 2; 
 
             // 3. Formação
             const valorHora = (base * 12) / (52 * 40);
             const formacao = hForm * valorHora;
 
-            // 4. Último Mês e Subsídio de Refeição
+            // 4. Último Mês
             const subMensal = subVal * 22;
             const ultimoMes = base + subMensal;
 
