--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
     <div class="nav-container">
         <a href="/" class="nav-logo">Financeiro <span style="color: #059669;">2026</span></a>
         <ul class="nav-links">
-            <li><a href="https://salarioliquido.vercel.app/">Salário</a></li>
-            <li><a href="https://simulador-credito-habitacao-2026.vercel.app/">Crédito</a></li>
-            <li><a href="https://calculadora-rescisao-contrato.vercel.app/">Rescisão</a></li>
-            <li><a href="https://simulador-subsidio-desemprego.vercel.app/">Desemprego</a></li>
+            <li><a href="https://salarioliquido.vercel.app/" id="nav-salario">Salário</a></li>
+            <li><a href="https://simulador-credito-habitacao-2026.vercel.app/" id="nav-credito">Crédito</a></li>
+            <li><a href="https://calculadora-rescisao-contrato.vercel.app/" id="nav-rescisao">Rescisão</a></li>
+            <li><a href="https://simulador-subsidio-desemprego.vercel.app/" id="nav-desemprego">Desemprego</a></li>
         </ul>
-        <div class="nav-mobile-menu">☰</div>
     </div>
 </nav>
     <div class="container">
