--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         .footer-legal { margin-top: 30px; padding-top: 20px; border-top: 1px solid #e2e8f0; font-size: 0.72rem; color: #94a3b8; text-align: center; line-height: 1.4; }
         .ad-spacer { margin: 20px 0; min-height: 90px; background: #fafafa; border: 1px solid #eee; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-size: 9px; color: #ccc; }
         @media (max-width: 550px) { .grid { grid-template-columns: 1fr; } .full { grid-column: span 1; } }
+        <link rel="stylesheet" href="style.css">
     </style>
 </head>
 <body>
