--- a/index.html
+++ b/index.html
@@ -3,37 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Rescisão de Contrato Portugal 2026</title>
-
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4525/4525944.png">
-
+    <title>Simulador de Rescisão de Contrato 2026</title>
+    <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6163421497152187" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav class="navbar-global">
+        <div class="nav-container">
+            <a href="/" class="nav-logo">Financeiro <span style="color: #059669;">2026</span></a>
+            <ul class="nav-links">
+                <li><a href="https://salarioliquido.vercel.app/">Salário</a></li>
+                <li><a href="https://simulador-credito-habitacao-2026.vercel.app/">Crédito</a></li>
+                <li><a href="https://calculadora-rescisao-contrato.vercel.app/" style="color: #ffffff; border-bottom: 2px solid #059669;">Rescisão</a></li>
+                <li><a href="https://simulador-subsidio-desemprego.vercel.app/">Desemprego</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <style>
-        :root { --primary: #0f172a; --accent: #0369a1; --bg: #f8fafc; --gold: #b45309; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); color: #334155; padding: 10px; margin: 0; }
-        .container { max-width: 700px; margin: 10px auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); position: relative; overflow: hidden; }
-        .container::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 5px; background: linear-gradient(90deg, var(--primary), var(--gold)); }
-        .header-seal { text-align: center; margin-bottom: 15px; color: var(--gold); font-size: 3.5rem; }
-        h1 { font-size: 1.3rem; color: var(--primary); text-align: center; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 0.5px; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-        .full { grid-column: span 2; }
-        label { display: flex; align-items: center; gap: 8px; font-weight: 600; font-size: 0.85rem; margin-bottom: 6px; color: #475569; }
-        label i { color: var(--gold); width: 16px; }
-        input, select { width: 100%; height: 48px; padding: 0 12px; border: 1px solid #cbd5e1; border-radius: 6px; font-size: 16px; box-sizing: border-box; background: #fff; }
-        .highlight-card { background: #fefce8; border: 1px solid #fef08a; padding: 15px; border-radius: 8px; }
-        button { width: 100%; height: 56px; background: var(--primary); color: white; border: none; border-radius: 8px; font-size: 1rem; font-weight: 700; cursor: pointer; margin-top: 20px; transition: 0.2s; display: flex; align-items: center; justify-content: center; gap: 10px; }
-        button:hover { background: #1e293b; transform: translateY(-1px); }
-        #results { margin-top: 25px; display: none; border: 2px solid #e2e8f0; border-radius: 10px; padding: 20px; background: #fff; }
-        .res-line { display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px dashed #e2e8f0; font-size: 0.95rem; }
-        .total-box { background: var(--primary); color: white; padding: 20px; border-radius: 8px; text-align: center; font-size: 1.6rem; font-weight: 800; margin-top: 15px; }
-        .footer-legal { margin-top: 30px; padding-top: 20px; border-top: 1px solid #e2e8f0; font-size: 0.72rem; color: #94a3b8; text-align: center; line-height: 1.4; }
-        .ad-spacer { margin: 20px 0; min-height: 90px; background: #fafafa; border: 1px solid #eee; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-size: 9px; color: #ccc; }
-        @media (max-width: 550px) { .grid { grid-template-columns: 1fr; } .full { grid-column: span 1; } }
-        <link rel="stylesheet" href="style.css">
-    </style>
+    <div class="container">
+        </div>
 </head>
 <body>
 <nav class="navbar-global">
